apps/cotoami/cotoami.yaml
apiVersion: v1
kind: Service
metadata:
  name: cotoami
  namespace: apps
spec:
  selector:
    app: cotoami
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 4000
    #nodePort: 30100
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cotoami
  namespace: apps
  labels:
    app: cotoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cotoami
  template:
    metadata:
      labels:
        app: cotoami
    spec:
      containers:
      - name: cotoami
        image: cotoami/cotoami:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
