apps/cotoami/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cotoami-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: cotoami-http-port
      protocol: HTTP
    hosts:
      - cotoami.simplefxn.com
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: cotoami-https-port
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: cotoami.simplefxn.com
    hosts:
      - cotoami.simplefxn.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cotoami-vs
  namespace: istio-system
spec:
  hosts:
  - "cotoami.simplefxn.com"
  gateways:
  - cotoami-gateway
  http:
  - route:
    - destination:
        host: cotoami.apps.svc.cluster.local
        port:
          number: 80
    corsPolicy:
      allowOrigin:
      - "*"
      allowMethods:
      - POST
      - GET
      - OPTIONS
      - CONNECT
      allowCredentials: true
      allowHeaders:
        - Accept
        - Accept-Encoding
        - Accept-Language
        - Cache-Control
        - Connection
        - Cookie
        - Host
        - Origin
        - Pragma
        - Sec-Websocket-Extensions
        - Sec-Websocket-Key
        - Sec-Websocket-Version
        - Upgrade
        - Upgrade-Insecure-Requests
        - User-Agent
      maxAge: "24h"
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: cotoami
  namespace: istio-system
spec:
  host: cotoami.apps.svc.cluster.local
  trafficPolicy:
    tls:
      mode: DISABLE
